--- a/app/src/main/res/layout/fragment_add_sample.xml
+++ b/app/src/main/res/layout/fragment_add_sample.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="15dp"
+    android:padding="10dp"
     tools:context=".takesample.AddSampleFragment">
 
     <EditText
@@ -12,28 +12,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/linearLayoutBottomAction"
-        android:layout_marginBottom="10dp"
         android:ems="10"
+        android:layout_marginBottom="10dp"
         android:hint="Notes"
-        android:textSize="20dp"
-        android:inputType="text" />
+        android:inputType="text"
+        android:textSize="20dp" />
 
     <LinearLayout
         android:id="@+id/linearLayoutBottomAction"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/btnTakeSample"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_margin="5dp"
             android:layout_weight="1"
             android:text="TAKE SAMPLE" />
 
@@ -41,10 +37,7 @@
             android:id="@+id/btnSave"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_margin="5dp"
             android:layout_weight="1"
             android:text="SAVE" />
 
@@ -64,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/editTextNote"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true">
 
         <TextView
             android:id="@+id/textViewInputValue"
@@ -98,8 +91,7 @@
             android:hint="0.00"
             android:inputType="number|text"
             android:textSize="40dp"
-            app:layout_constraintStart_toEndOf="@id/textViewInputValue"
-            tools:layout_editor_absoluteY="6dp" />
+            app:layout_constraintStart_toEndOf="@id/textViewInputValue" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
@@ -108,24 +100,37 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textViewConnectionStatus"
         android:ems="10"
-        android:text="Spectra wavelength values"
-        android:gravity="start|top"
         android:enabled="true"
-        android:inputType="textMultiLine" />
+        android:gravity="start|top"
+        android:inputType="textMultiLine"
+        android:text="Spectra wavelength values" />
 
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barchart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@id/linearInputValue"
         android:layout_below="@id/editTextWavelengthValues"
-        android:layout_above="@id/linearInputValue"/>
+        android:layout_marginTop="-5dp"
+        android:layout_marginBottom="4dp">
+    </com.github.mikephil.charting.charts.BarChart>
+
+
+    <ProgressBar
+        android:id="@+id/progressBarSavaData"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/textViewConnectionStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="start"
         android:text="Success connection: &quot;device_ble&quot;"
         android:textSize="15dp"
         android:textStyle="italic"
