--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="400dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/imageView1"
         app:layout_constraintBottom_toBottomOf="parent">
@@ -133,12 +135,12 @@
                 app:cardBackgroundColor="#C37676">
 
                 <TextView
-                    android:id="@+id/textViewInfo"
+                    android:id="@+id/textViewBLE"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:onClick="changeActivity"
-                    android:text="Info"
+                    android:text="BLE"
                     android:textSize="24dp" />
             </androidx.cardview.widget.CardView>
 
