--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="186dp"
-        android:layout_height="199dp"
+        android:layout_width="wrap_content"
+        android:layout_height="230dp"
+        android:layout_marginBottom="20dp"
         android:scaleType="centerInside"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_gravity="center"
         app:srcCompat="@drawable/healthcare_cover" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/imageView1"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_weight="1" >
 
 
         <LinearLayout
@@ -48,8 +47,8 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:onClick="changeActivity"
-                    android:text="Take sample"
-                    android:textSize="24dp" />
+                    android:text="@string/label_take_sample"
+                    android:textSize="@dimen/feature_label_font_size" />
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -65,8 +64,8 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:onClick="changeActivity"
-                    android:text="Measurement"
-                    android:textSize="24dp" />
+                    android:text="@string/label_measurement"
+                    android:textSize="@dimen/feature_label_font_size" />
             </androidx.cardview.widget.CardView>
         </LinearLayout>
 
@@ -93,8 +92,8 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:onClick="changeActivity"
-                    android:text="Dataset"
-                    android:textSize="24dp" />
+                    android:text="@string/label_dataset"
+                    android:textSize="@dimen/feature_label_font_size" />
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -110,8 +109,8 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:onClick="changeActivity"
-                    android:text="ML Models"
-                    android:textSize="24dp" />
+                    android:text="@string/label_ML_models"
+                    android:textSize="@dimen/feature_label_font_size" />
             </androidx.cardview.widget.CardView>
         </LinearLayout>
 
@@ -133,13 +132,13 @@
                 app:cardBackgroundColor="#C37676">
 
                 <TextView
-                    android:id="@+id/textViewInfo"
+                    android:id="@+id/textViewBLE"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:onClick="changeActivity"
-                    android:text="Info"
-                    android:textSize="24dp" />
+                    android:text="@string/label_BLE"
+                    android:textSize="@dimen/feature_label_font_size" />
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -155,12 +154,16 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:onClick="changeActivity"
-                    android:text="Setting"
-                    android:textSize="24dp" />
+                    android:text="@string/label_setting"
+                    android:textSize="@dimen/feature_label_font_size" />
             </androidx.cardview.widget.CardView>
         </LinearLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="50dp" />
 
     </LinearLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
