--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -6,5 +6,6 @@
         <item>@font/aclonica</item>
         <item>@font/amethysta</item>
         <item>@font/archivo_black</item>
+        <item>@font/arvo</item>
     </array>
 </resources>
