--- a/app/src/main/res/layout/ble_device_layout.xml
+++ b/app/src/main/res/layout/ble_device_layout.xml
@@ -5,20 +5,34 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/ble_device_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Device name"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/icon_settings_bluetooth" />
 
-    <TextView
-        android:id="@+id/ble_device_address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="MAC address"
-        android:textSize="14sp"
-        android:textStyle="normal|italic" />
+        <TextView
+            android:id="@+id/ble_device_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/amethysta"
+            android:text="Device name"
+            android:textColor="#450202"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/ble_device_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="MAC address:"
+            android:textSize="14sp"
+            android:textStyle="normal|italic" />
+    </LinearLayout>
+
 
 </LinearLayout>
